syntax = "proto3";

package ai.metathings.service.device;

import "github.com/nayotta/metathings/proto/deviced/model.proto";

message ShowModuleResponse {
	ai.metathings.service.deviced.Module module = 1;
}
